Kubernetes2/k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: kubernetes-homework-2-api
        image: api-image
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: api
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  type: LoadBalancer
